manifests/prod/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: app-qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
